--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <img src="./assets/images/image-retro-pcs.jpg" alt="" />
         <div>
           <span>01</span>
-          <h4>Reviving Retro PCs</h4>
+          <h4>Reviving Sohe PCs</h4>
           <p>What happens when old PCs are given modern upgrades?</p>
         </div>
       </article>
